Changed card color and padding

--- a/index.html
+++ b/index.html
@@ -55,7 +55,8 @@
 		
 			<!-- Home page -->
 			<!-- <div class="container-fluid"> -->
-				<section class="hero" id="hero">
+				
+			<section class="hero" id="hero" >
 					<div class="row">
 						<div class="col-lg-6 col-md-12 text-center hero__first-columm">
 							<span class="hero__text">an independent creative<br>web developer</span>
@@ -64,57 +65,64 @@
 						</div>
 						<div class="col-lg-6 col-md-12 hero__secound-columm">
 							<img class="img-fluid hero__img" src="images/responsive-designs.png" alt="web-developer">
-							<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#deb887" fill-opacity="0.1" d="M0,64L60,80C120,96,240,128,360,133.3C480,139,600,117,720,96C840,75,960,53,1080,58.7C1200,64,1320,96,1380,112L1440,128L1440,320L1380,320C1320,320,1200,320,1080,320C960,320,840,320,720,320C600,320,480,320,360,320C240,320,120,320,60,320L0,320Z"></path></svg>
+							<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#deb887" fill-opacity="0.2" d="M0,96L60,117.3C120,139,240,181,360,181.3C480,181,600,139,720,101.3C840,64,960,32,1080,58.7C1200,85,1320,171,1380,213.3L1440,256L1440,320L1380,320C1320,320,1200,320,1080,320C960,320,840,320,720,320C600,320,480,320,360,320C240,320,120,320,60,320L0,320Z"></path></svg>
 						</div>
 					</div>
-				</section>
+			</section>
+
+
 			<!-- </div> -->
 			<!-- About section -->
 			<!-- <div class="container-fluid"> -->
-				<section id="about" class="about">
-					<h1 class="about__heading">About
-						<span class="about__heading--text">Me</span>
-					</h1>
-					<div class="row">
-						<!-- <div class="about-info js-scroll slide-in-bottom"> -->
-							<div class="col-lg-6 col-md-12 about__first-column">
-								<img 
-									class="about__img"
-									src="/images/luciano_Lima.jpeg"
-									class="js-scroll slide-in-left"
-									alt="perfil photo"
-								/>
-							</div>
+
+
+			<section id="about" class="about">
+				<h1 class="about__heading">About
+					<span class="about__heading--text">Me</span>
+				</h1>
+				<div class="row">
+					<!-- <div class="about-info js-scroll slide-in-bottom"> -->
+					<div class="col-lg-6 col-md-12 about__first-column">
+						<img 
+							class="about__img"
+							src="/images/luciano_Lima.jpeg"
+							class="js-scroll slide-in-left"
+							alt="perfil photo"
+						/>
+					</div>
 							<!-- <div class="js-scroll slide-in-right"> -->
-							<div class="col-lg-6 col-md-12 about__secound-column">
-								<h2>Hello, I'm Luciano Lima</h2>
-								<p>
-									I'm a self-taught <em><strong>Web Developer</strong> and school-taught <strong>BTech,
-									System Analysis & Developement</strong></em> born in Brazil but living in
-									London for the last 15 years. 
-									<p>I've been<strong>'Making Things Happen</strong> 
-									since 2017; a year later I've decided to take a step further joining Code Institute where I got 
-									a Credencial Diploma in <em><strong> Full Stack Web Developement.</strong></em></p>
+					<div class="col-lg-6 col-md-12 about__secound-column">
+						<h2>Hello, I'm Luciano Lima</h2>
+						<p>
+							I'm a self-taught <em><strong>Web Developer</strong> and school-taught <strong>BTech,
+							System Analysis & Developement</strong></em> born in Brazil but living in
+							London for the last 15 years. 
+							<p>I've been<strong>'Making Things Happen</strong> 
+							since 2017; a year later I've decided to take a step further joining Code Institute where I got 
+							a Credencial Diploma in <em><strong> Full Stack Web Developement.</strong></em></p>
+						</p>
+						<div class="row row-small">
+							<div class="col-lg-6 col-md-12">
+								<p class="about__get-in-touch">
+									If you are a business seeking web presence or an employer
+									looking to hire: <br>Get in touch with me<br>
+									<a href="#contact"><img class="about__email" src="/images/e-mail.png" alt="email box"></a>
 								</p>
-								<div class="row row-small-fs">
-									<div class="col-lg-6 col-md-12">
-										<p class="about__get-in-touch">
-											If you are a business seeking web presence or an employer
-											looking to hire: <br>Get in touch with me<br>
-											<a href="#contact"><img class="about__email" src="/images/e-mail.png" alt="email box"></a>
-										</p>
-									</div>
-									<div class="col-lg-6 col-md-12 about__get-in-touch--align-middle">
-										<p>Download My Resume<br><i class="fas fa-download"></i></p>
-									</div>
-								</div>
+							</div>
+							<div class="col-lg-6 col-md-12 about__get-in-touch--align-middle">
+								<p>Download My Resume<br><i class="fas fa-download"></i></p>
 							</div>
 						</div>
-						<!-- </div> -->
 					</div>
-				</section>
+						<!-- </div> -->
+						<!-- </div> -->
+				</div>
+			</section>
+
+
 			<!-- </div> -->
 			<!-- Portfolio section -->
+
 			<section id="portfolio" class="portfolio">
 				<h3 class="portfolio__heading">my
 					<span class="portfolio__heading--text">work</span>
@@ -193,7 +201,6 @@
 				</div>
 				<br>
 				<!-- *********************** First 3 rows ************************-->
-				
 				<div class="row">
 					<!-- Cookbook -->
 					<div class="col-md-4 col-sm-12">
@@ -266,6 +273,8 @@
 					</div>
 				</div>
 			</section>
+
+
 			<!-- Contact section -->
 			<section id="contact" class="contact">
 				<h4 class="contact__heading">Contact
@@ -302,6 +311,8 @@
 					</form>
 				</div>
 			</section>
+
+
 			<!-- Footer -->
 			<footer class="footer text-center">
 				<div class="footer__social-media p-4">
@@ -317,6 +328,8 @@
 				</div>
 				<span class="footer__copyright text-center p-3">© Designed & built by Luciano Lima</span>
 			</footer> 
+
+
 		</div>
 		<!-- Bootstrap -->
 		<script
