Stying fas icons and sharing with about section

--- a/index.html
+++ b/index.html
@@ -106,11 +106,11 @@
 								<p class="about__get-in-touch">
 									If you are a business seeking web presence or an employer
 									looking to hire: <br>Get in touch with me<br>
-									<a href="#contact"><img class="about__email" src="/images/e-mail.png" alt="email box"></a>
+									<a href="#contact"><img class="about__email footer__icon" src="/images/e-mail.png" alt="email box"></a>
 								</p>
 							</div>
 							<div class="col-lg-6 col-md-12 about__get-in-touch--align-middle">
-								<p>Download My Resume<br><i class="fas fa-download"></i></p>
+								<p>Download My Resume<br><i class="fas fa-download footer__icon"></i></p>
 							</div>
 						</div>
 					</div>
