--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 						</div>
 						<div class="col-lg-6 col-md-12 hero__secound-columm">
 							<img class="img-fluid hero__img" src="images/responsive-designs.png" alt="web-developer">
-							<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#deb887" fill-opacity="0.2" d="M0,96L60,117.3C120,139,240,181,360,181.3C480,181,600,139,720,101.3C840,64,960,32,1080,58.7C1200,85,1320,171,1380,213.3L1440,256L1440,320L1380,320C1320,320,1200,320,1080,320C960,320,840,320,720,320C600,320,480,320,360,320C240,320,120,320,60,320L0,320Z"></path></svg>
+								<svg class="wave-img"xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="" fill-opacity="0.2" d="M0,96L60,117.3C120,139,240,181,360,181.3C480,181,600,139,720,101.3C840,64,960,32,1080,58.7C1200,85,1320,171,1380,213.3L1440,256L1440,320L1380,320C1320,320,1200,320,1080,320C960,320,840,320,720,320C600,320,480,320,360,320C240,320,120,320,60,320L0,320Z"></path></svg>
 						</div>
 					</div>
 			</section>
@@ -103,10 +103,10 @@
 						</p>
 						<div class="row row-small">
 							<div class="col-lg-6 col-md-12">
-								<p class="about__get-in-touch">
+					`			<p class="about__get-in-touch">
 									If you are a business seeking web presence or an employer
 									looking to hire: <br>Get in touch with me<br>
-									<a href="#contact"><img class="about__email footer__icon" src="/images/e-mail.png" alt="email box"></a>
+									<a href="#contact"><i class="fas fa-envelope footer__icon"></i></a>
 								</p>
 							</div>
 							<div class="col-lg-6 col-md-12 about__get-in-touch--align-middle">
@@ -141,10 +141,10 @@
 									<li class="portfolio__list portfolio__list--item list-group-item">javascrip - bootstrap - html - css</li>
 								</ul>
 								<div class="portfolio__link">
-									<a href="http://www.calyhair.com/" class="card-link" target="_blank">
+									<a href="http://www.caly-hair.com/" class="card-link" target="_blank">
 										<button type="button" class="portfolio__button btn btn-secondary">Live Version</button>
 									</a>
-									<a href="https://github.com/Luciano-Lima/caly-hair" class="card-link" target="_blank">
+									<a href="https://github.com/Luciano-Lima/caly-hair-new-app" class="card-link" target="_blank">
 										<button type="button" class="portfolio__button btn btn-secondary">Github</button>
 									</a>
 								</div>
