--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 			<!-- Navegation -->
 			<nav class="navbar navbar-expand-lg navbar-light menu">
 				<div class="container-fluid">
-					<a class="navbar-brand" href="#"><img src="/images/logo.png" alt="">LIMA</a>
+					<a class="navbar-brand logo-img" href="#"><img src="/images/lima.png" alt="logo"></a>
 					<button
 						class="navbar-toggler"
 						type="button"
