--- a/index.html
+++ b/index.html
@@ -18,40 +18,40 @@
 		<link rel="stylesheet" href="scss/style.css" />
 	</head>
 	<body>
-		<div class="wrapper">
-			<!-- Navegation -->
-			<nav class="navbar navbar-expand-lg navbar-light menu">
-				<div class="container-fluid">
-					<a class="navbar-brand logo-img" href="#"><img src="/images/lima.png" alt="logo"></a>
-					<button
-						class="navbar-toggler"
-						type="button"
-						data-bs-toggle="collapse"
-						data-bs-target="#navbarSupportedContent"
-						aria-controls="navbarSupportedContent"
-						aria-expanded="false"
-						aria-label="Toggle navigation"
-					>
-						<span class="navbar-toggler-icon"></span>
-					</button>
-					<div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
-						<ul class="navbar-nav ml-auto mb-lg-0">
-							<li class="nav-item">
-								<a class="nav-link active" aria-current="page" href="#hero">home</a>
-							</li>
-							<li class="nav-item">
-								<a class="nav-link" href="#about">about</a>
-							</li>
-							<li class="nav-item">
-								<a class="nav-link" href="#portfolio">portfolio</a>
-							</li>
-							<li class="nav-item">
-								<a class="nav-link" href="#contact">contact</a>
-							</li>
-						</ul>
-					</div>
-				</div>
-			</nav>
+		<!-- Navegation -->
+		<nav class="navbar navbar-expand-lg navbar-light menu">
+			<div class="container-fluid">
+				<a class="navbar-brand logo-img" href="#"><img src="/images/Llima.png" alt="logo"></a>
+				<button
+				class="navbar-toggler"
+				type="button"
+				data-bs-toggle="collapse"
+				data-bs-target="#navbarSupportedContent"
+				aria-controls="navbarSupportedContent"
+				aria-expanded="false"
+				aria-label="Toggle navigation"
+				>
+				<span class="navbar-toggler-icon"></span>
+			</button>
+			<div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
+				<ul class="navbar-nav ml-auto mb-lg-0">
+					<li class="nav-item">
+						<a class="nav-link active" aria-current="page" href="#hero">home</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="#about">about</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="#portfolio">portfolio</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="#contact">contact</a>
+					</li>
+				</ul>
+			</div>
+		</div>
+	</nav>
+	<div class="wrapper">
 		
 			<!-- Home page -->
 			<!-- <div class="container-fluid"> -->
@@ -60,7 +60,7 @@
 					<div class="row">
 						<div class="col-lg-6 col-md-12 text-center hero__first-columm">
 							<span class="hero__text">an independent creative<br>web developer</span>
-							<h1 class="hero__heading">making things happen</h1><br>
+							<span class="hero__heading"></span>
 							<span class="hero__text">since 2017</span>	
 						</div>
 						<div class="col-lg-6 col-md-12 hero__secound-columm">
@@ -92,18 +92,18 @@
 					</div>
 							<!-- <div class="js-scroll slide-in-right"> -->
 					<div class="col-lg-6 col-md-12 about__secound-column">
-						<h2>Hello, I'm Luciano Lima</h2>
+						<!-- <h2>Hello, I'm Luciano Lima</h2> -->
 						<p>
-							I'm a self-taught <em><strong>Web Developer</strong> and school-taught <strong>BTech,
-							System Analysis & Developement</strong></em> born in Brazil but living in
+							Hello, I'm Luciano Lima, a self-taught <strong>Web Developer</strong> and school-taught <strong>BTech,
+							System Analysis & Developement</strong> born in Brazil but living in
 							London for the last 15 years. 
-							<p>I've been<strong>'Making Things Happen</strong> 
+							<p>I've been<strong> 'Making Things Happen'</strong> 
 							since 2017; a year later I've decided to take a step further joining Code Institute where I got 
 							a Credencial Diploma in <em><strong> Full Stack Web Developement.</strong></em></p>
 						</p>
-						<div class="row row-small">
+						<div class="row row-small about__third-column">
 							<div class="col-lg-6 col-md-12">
-					`			<p class="about__get-in-touch">
+								<p class="about__get-in-touch">
 									If you are a business seeking web presence or an employer
 									looking to hire: <br>Get in touch with me<br>
 									<a href="#contact"><i class="fas fa-envelope footer__icon"></i></a>
@@ -314,6 +314,7 @@
 
 
 			<!-- Footer -->
+		</div>
 			<footer class="footer text-center">
 				<div class="footer__social-media p-4">
 					<!-- Linkedin -->
@@ -330,7 +331,6 @@
 			</footer> 
 
 
-		</div>
 		<!-- Bootstrap -->
 		<script
 			src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
@@ -342,5 +342,6 @@
 			integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF"
 			crossorigin="anonymous"
 		></script>
+		<script src="js/script.js"></script>
 	</body>
 </html>
