Added resume link

--- a/index.html
+++ b/index.html
@@ -89,7 +89,9 @@
 							</p>
 						</div>
 						<div class="col-lg-6 col-md-12 about__get-in-touch--align-middle">
-							<p>Download My Resume<br><i class="fas fa-download footer__icon"></i></p>
+							<p>Download My Resume<br>
+								<a href="resume/cv.pdf"><i class="fas fa-download footer__icon"></i></a>
+							</p>
 						</div>
 					</div>
 				</div>
