Correcting imgs path on live version

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 	<!-- Navegation -->
 	<nav class="navbar navbar-expand-lg navbar-light menu">
 		<div class="container-fluid">
-			<a class="navbar-brand logo-img" href="#"><img src="/images/Llima.png" alt="logo"></a>
+			<a class="navbar-brand logo-img" href="#"><img src="./images/Llima.png" alt="logo"></a>
 			<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
 				aria-expanded="false" aria-label="Toggle navigation">
 				<span class="navbar-toggler-icon"></span>
@@ -69,7 +69,7 @@
 			</h1>
 			<div class="row">
 				<div class="col-lg-6 col-md-12 about__first-column">
-					<img class="about__img" src="/images/luciano_Lima.jpeg" class="js-scroll slide-in-left" alt="perfil photo" />
+					<img class="about__img" src="./images/luciano_Lima.jpeg" class="js-scroll slide-in-left" alt="perfil photo" />
 				</div>
 				<div class="col-lg-6 col-md-12 about__secound-column">
 					<p>
