Removed Amo project, Added RPS game

--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
 							<p class="portfolio__card-text card-text">Fitness & Health Lifestyle</p>
 							<p class="portfolio__card-title portfolio__card-title--skills">skill used:</p>
 							<ul class="portfolio__list list-group list-group-flush">
-								<li class="portfolio__list portfolio__list--item list-group-item">html - scss - email-js</li>
+								<li class="portfolio__list portfolio__list--item list-group-item">html - Css - email-js</li>
 								<li class="portfolio__list portfolio__list--item list-group-item">javascrip - bootstrap</li>
 							</ul>
 							<div class="portfolio__link">
@@ -201,20 +201,20 @@
 				<!-- Amo -->
 				<div class="col-md-4 col-sm-12">
 					<div class="portfolio__card card text-center">
-						<img class="portfolio__img" src="./images/portfolio/amo-hair.png" alt="Amo hair saloon">
+						<img class="portfolio__img" src="./images/portfolio/r-p-s_game.png" alt="rock paper scissors game">
 						<div class="portfolio__card-body card-body">
-							<h5 class="portfolio__card-title card-title">amo hair salon</h5>
-							<p class="portfolio__card-text card-text">A project created for a Hair Salon</p>
+							<h5 class="portfolio__card-title card-title">Rock Paper Scissors</h5>
+							<p class="portfolio__card-text card-text">A Game Project</p>
 							<p class="portfolio__card-title portfolio__card-title--skills">skill used:</p>
 							<ul class="portfolio__list list-group list-group-flush">
-								<li class="portfolio__list portfolio__list--item list-group-item">phython - django - heroku - amazon s3</li>
-								<li class="portfolio__list portfolio__list--item list-group-item">javascrip - bootstrap - css</li>
+								<li class="portfolio__list portfolio__list--item list-group-item">Javascript - Css - </li>
+								<li class="portfolio__list portfolio__list--item list-group-item">BEM Methodology - Sass</li>
 							</ul>
 							<div class="portfolio__link">
-								<a href="https://amo-hair-beauty.herokuapp.com/" class="card-link" target="_blank">
+								<a href="https://luciano-lima.github.io/R-P-S_Game/" class="card-link" target="_blank">
 									<button type="button" class="portfolio__button btn btn-secondary">Live Version</button>
 								</a>
-								<a href="https://github.com/Luciano-Lima/amo-salon" class="card-link" target="_blank">
+								<a href="https://github.com/Luciano-Lima/R-P-S_Game" class="card-link" target="_blank">
 									<button type="button" class="portfolio__button btn btn-secondary">Github</button>
 								</a>
 							</div>
