Renamed skills set on r-p-s game

--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
 							<p class="portfolio__card-text card-text">A Game Project</p>
 							<p class="portfolio__card-title portfolio__card-title--skills">skill used:</p>
 							<ul class="portfolio__list list-group list-group-flush">
-								<li class="portfolio__list portfolio__list--item list-group-item">Javascript - Css Grid - </li>
+								<li class="portfolio__list portfolio__list--item list-group-item">Javascript - Css Grid System </li>
 								<li class="portfolio__list portfolio__list--item list-group-item">BEM Methodology - Sass</li>
 							</ul>
 							<div class="portfolio__link">
